--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "release": "semantic-release",
     "build": "tsc",
+    "test": "mocha -r ts-node/register ./src/**/*.spec.ts",
     "lint": "eslint './src/**/*' './example-app/**/*'",
     "check:all": "yarn lint && yarn build"
   },
@@ -24,12 +25,17 @@
     "admin-bro": ">=3.1.1"
   },
   "devDependencies": {
-    "admin-bro": ">=3.1.1",
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
     "@semantic-release/git": "^9.0.0",
+    "@types/chai": "^4.2.12",
+    "@types/mocha": "^8.0.3",
+    "@types/sinon": "^9.0.5",
+    "@types/sinon-chai": "^3.2.4",
     "@typescript-eslint/eslint-plugin": "^3.7.0",
     "@typescript-eslint/parser": "^3.7.0",
+    "admin-bro": ">=3.1.1",
+    "chai": "^4.2.0",
     "eslint": "^7.5.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-plugin-import": "^2.22.0",
@@ -37,8 +43,12 @@
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^4.0.8",
     "husky": "^4.2.5",
+    "mocha": "^8.1.3",
     "semantic-release": "^17.0.7",
     "semantic-release-slack-bot": "^1.6.2",
+    "sinon": "^9.0.3",
+    "sinon-chai": "^3.5.0",
+    "ts-node": "^9.0.0",
     "typescript": "^3.9.7"
   }
 }
