--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -27,6 +27,8 @@ jobs:
         run: yarn install
       - name: Lint
         run: yarn lint
+      - name: Test
+        run: yarn test
       - name: Build
         run: yarn build
       - name: Release
