--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
   },
-  "dependencies": {
-    "aws-sdk": "^2.728.0"
-  },
   "peerDependencies": {
     "admin-bro": ">=3.2.5"
+  },
+  "optionalDependencies": {
+    "aws-sdk": "^2.728.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^8.3.5",
@@ -49,6 +49,7 @@
     "sinon": "^9.0.3",
     "sinon-chai": "^3.5.0",
     "ts-node": "^9.0.0",
+    "aws-sdk": "^2.728.0",
     "typescript": "^3.9.7"
   }
 }
