--- a/example-app/package.json
+++ b/example-app/package.json
@@ -21,7 +21,7 @@
   "dependencies": {
     "@admin-bro/express": "^3.0.0",
     "@admin-bro/typeorm": "1.2.0",
-    "@admin-bro/upload": "../",
+    "@admin-bro/upload": "v1.0.0-beta.3",
     "admin-bro": "^3.2.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
