--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@admin-bro/upload",
   "version": "1.0.0-beta.3",
-  "main": "build/index.js",
+  "main": "index.js",
   "types": "types/index.d.ts",
   "private": false,
   "repository": "git@github.com:SoftwareBrothers/admin-bro-upload.git",
