feat: add google storage
closes  #6
* organise exports from the library
* organise documentatation - move to .md file

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,10 @@
     "noImplicitThis": true,
     "moduleResolution": "node",
     "module": "commonjs",
-    "baseUrl": "."
+    "baseUrl": ".",
+    "paths": {
+      "react": ["node_modules/@types/react"]
+    }
   },
   "include": [
     "./src/**/*",
