--- a/example-app/package.json
+++ b/example-app/package.json
@@ -23,7 +23,7 @@
   "dependencies": {
     "@admin-bro/express": "^3.0.0",
     "@admin-bro/typeorm": "1.2.0",
-    "@admin-bro/upload": "v1.0.0-beta.3",
+    "@admin-bro/upload": "../",
     "@google-cloud/storage": "^5.3.0",
     "admin-bro": "^3.2.5",
     "dotenv": "^8.2.0",
