--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "yarn tsc",
     "clean": "rm -fr build && mkdir build && rm -fr types && mkdir types",
     "dev": "yarn clean && tsc --watch",
-    "test": "mocha -r ts-node/register ./src/**/*.spec.ts",
+    "test": "TS_NODE_FILES=true mocha -r ts-node/register ./src/**/*.spec.ts",
     "lint": "eslint './src/**/*' './example-app/**/*'",
     "check:all": "yarn lint && yarn build && yarn test"
   },
@@ -38,7 +38,7 @@
     "@types/sinon-chai": "^3.2.4",
     "@typescript-eslint/eslint-plugin": "^3.7.0",
     "@typescript-eslint/parser": "^3.7.0",
-    "admin-bro": ">=3.3.0-beta.20",
+    "admin-bro": ">=3.3.0-beta.21",
     "aws-sdk": "^2.728.0",
     "chai": "^4.2.0",
     "eslint": "^7.5.0",
