--- a/.gitignore
+++ b/.gitignore
@@ -156,7 +156,7 @@ dist
 
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
 
-types
+/types/**/*
 build
 .adminbro
 
