--- a/example-app/package.json
+++ b/example-app/package.json
@@ -22,10 +22,10 @@
   },
   "dependencies": {
     "@admin-bro/express": "^3.0.0",
-    "@admin-bro/typeorm": "1.4.0-beta.1",
+    "@admin-bro/typeorm": "1.4.0",
     "@admin-bro/upload": "../",
     "@google-cloud/storage": "^5.3.0",
-    "admin-bro": "^3.3.0-beta.28",
+    "admin-bro": "^3.3.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-formidable": "^1.2.0",
