--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     }
   },
   "peerDependencies": {
-    "admin-bro": ">=3.3.0-beta.28"
+    "admin-bro": ">=3.3.1"
   },
   "optionalDependencies": {
     "@google-cloud/storage": "^5.3.0",
@@ -38,7 +38,7 @@
     "@types/sinon-chai": "^3.2.4",
     "@typescript-eslint/eslint-plugin": "^3.7.0",
     "@typescript-eslint/parser": "^3.7.0",
-    "admin-bro": ">=3.3.0-beta.28",
+    "admin-bro": ">=3.3.1",
     "aws-sdk": "^2.728.0",
     "chai": "^4.2.0",
     "eslint": "^7.5.0",
