--- a/example-app/package.json
+++ b/example-app/package.json
@@ -21,11 +21,11 @@
     "wait-on": "^5.2.0"
   },
   "dependencies": {
-    "@admin-bro/express": "^3.0.0",
-    "@admin-bro/typeorm": "1.4.0",
-    "@admin-bro/upload": "../",
+    "@adminjs/express": "^3.0.0",
+    "@adminjs/typeorm": "1.4.0",
+    "@adminjs/upload": "../",
     "@google-cloud/storage": "^5.3.0",
-    "admin-bro": "^3.3.1",
+    "adminjs": "^3.3.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-formidable": "^1.2.0",
