--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@adminjs/upload",
-  "version": "2.0.2-dev2",
+  "version": "2.0.2",
   "main": "index.js",
   "types": "types/index.d.ts",
   "private": false,
@@ -25,7 +25,7 @@
   },
   "optionalDependencies": {
     "@google-cloud/storage": "^5.3.0",
-    "aws-sdk": "^2.1135.0"
+    "aws-sdk": "^2.728.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^8.3.5",
