--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@adminjs/upload",
-  "version": "2.0.2",
+  "version": "2.0.2-dev3",
   "main": "index.js",
   "types": "types/index.d.ts",
   "private": false,
@@ -25,7 +25,7 @@
   },
   "optionalDependencies": {
     "@google-cloud/storage": "^5.3.0",
-    "aws-sdk": "^2.728.0"
+    "aws-sdk": "^2.1138.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^8.3.5",
@@ -39,7 +39,7 @@
     "@typescript-eslint/eslint-plugin": "^3.7.0",
     "@typescript-eslint/parser": "^3.7.0",
     "adminjs": "^5.0.0",
-    "aws-sdk": "^2.728.0",
+    "aws-sdk": "^2.1138.0",
     "chai": "^4.2.0",
     "eslint": "^7.5.0",
     "eslint-config-airbnb": "^18.2.0",
