--- a/package.json
+++ b/package.json
@@ -55,5 +55,8 @@
     "sinon-chai": "^3.5.0",
     "ts-node": "^9.0.0",
     "typescript": "^3.9.7"
+  },
+  "dependencies": {
+    "fs-extra": "^11.1.0"
   }
 }
