--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "name": "@adminjs/upload",
   "version": "3.0.1",
-  "main": "index.js",
-  "types": "types/index.d.ts",
+  "type": "module",
+  "exports": {
+    ".": {
+      "import": "./build/index.js",
+      "types": "./types/index.d.ts"
+    }
+  },
   "private": false,
   "repository": "git@github.com:SoftwareBrothers/adminjs-upload.git",
   "license": "MIT",
@@ -38,7 +43,7 @@
     "@types/sinon-chai": "^3.2.4",
     "@typescript-eslint/eslint-plugin": "^3.7.0",
     "@typescript-eslint/parser": "^3.7.0",
-    "adminjs": "^6.0.0",
+    "adminjs": "^6.8.7",
     "aws-sdk": "^2.728.0",
     "chai": "^4.2.0",
     "eslint": "^7.5.0",
@@ -54,6 +59,6 @@
     "sinon": "^9.0.3",
     "sinon-chai": "^3.5.0",
     "ts-node": "^9.0.0",
-    "typescript": "^3.9.7"
+    "typescript": "^4.9.5"
   }
 }
