--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "name": "@adminjs/upload",
   "version": "3.0.1",
-  "main": "index.js",
-  "types": "types/index.d.ts",
+  "type": "module",
+  "exports": {
+    ".": {
+      "import": "./build/index.js",
+      "types": "./types/index.d.ts"
+    }
+  },
   "private": false,
   "repository": "git@github.com:SoftwareBrothers/adminjs-upload.git",
   "license": "MIT",
@@ -28,6 +33,7 @@
     "aws-sdk": "^2.728.0"
   },
   "devDependencies": {
+    "adminjs": "^7.0.0-beta-v7.3",
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
     "@google-cloud/storage": "^5.3.0",
