--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build": "tsc",
     "clean": "rm -fr build && mkdir build && rm -fr types && mkdir types",
     "dev": "yarn clean && tsc --watch",
-    "test": "TS_NODE_FILES=true mocha -r ts-node/register ./src/**/*.spec.ts",
+    "test": "TS_NODE_FILES=true mocha --loader=ts-node/esm ./src/**/*.spec.ts",
     "lint": "eslint './src/**/*' './example-app/**/*'",
     "check:all": "yarn lint && yarn build && yarn test"
   },
@@ -29,8 +29,8 @@
     "adminjs": ">=6.0.0"
   },
   "optionalDependencies": {
-    "@google-cloud/storage": "^5.3.0",
-    "aws-sdk": "^2.728.0"
+    "@google-cloud/storage": "^6.9.4",
+    "aws-sdk": "^2.1339.0"
   },
   "devDependencies": {
     "adminjs": "^7.0.0-beta-v7.3",
@@ -45,21 +45,21 @@
     "@typescript-eslint/eslint-plugin": "^3.7.0",
     "@typescript-eslint/parser": "^3.7.0",
     "adminjs": "^6.8.7",
-    "aws-sdk": "^2.728.0",
-    "chai": "^4.2.0",
-    "eslint": "^7.5.0",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-react": "^7.20.3",
-    "eslint-plugin-react-hooks": "^4.0.8",
+    "aws-sdk": "^2.1339.0",
+    "chai": "^4.3.7",
+    "eslint": "^8.36.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^4.2.5",
-    "mocha": "^8.1.3",
-    "semantic-release": "^17.0.7",
-    "semantic-release-slack-bot": "^1.6.2",
-    "sinon": "^9.0.3",
-    "sinon-chai": "^3.5.0",
-    "ts-node": "^9.0.0",
-    "typescript": "^5.0.2"
+    "typescript": "^5.0.2",
+    "mocha": "^10.2.0",
+    "semantic-release": "^20.1.3",
+    "semantic-release-slack-bot": "^4.0.0",
+    "sinon": "^15.0.2",
+    "sinon-chai": "^3.7.0",
+    "ts-node": "^10.9.1"
   }
 }
