--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "@types/sinon-chai": "^3.2.9",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
-    "adminjs": "^7.0.0-beta-v7.1",
+    "adminjs": "^7.0.0-beta-v7.2",
     "aws-sdk": "^2.1339.0",
     "chai": "^4.3.7",
     "eslint": "^8.36.0",
@@ -59,6 +59,8 @@
     "sinon": "^15.0.2",
     "sinon-chai": "^3.7.0",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "@google-cloud/storage": "^6.9.4",
+    "aws-sdk": "^2.1339.0"
   }
 }
