--- a/package.json
+++ b/package.json
@@ -59,6 +59,8 @@
     "semantic-release-slack-bot": "^4.0.0",
     "sinon": "^15.0.2",
     "sinon-chai": "^3.7.0",
+    "@google-cloud/storage": "^6.9.4",
+    "aws-sdk": "^2.1339.0",
     "ts-node": "^10.9.1"
   }
 }
