--- a/package.json
+++ b/package.json
@@ -30,21 +30,25 @@
   },
   "optionalDependencies": {
     "@google-cloud/storage": "^6.9.4",
-    "aws-sdk": "^2.1339.0"
+    "@aws-sdk/client-s3": "^3.301.0",
+    "@aws-sdk/s3-request-presigner": "^3.301.0"
   },
   "devDependencies": {
+    "@aws-sdk/client-s3": "^3.301.0",
+    "@aws-sdk/s3-request-presigner": "^3.301.0",
     "@commitlint/cli": "^17.4.4",
     "@commitlint/config-conventional": "^17.4.4",
     "@google-cloud/storage": "^6.9.4",
     "@semantic-release/git": "^10.0.1",
     "@types/chai": "^4.3.4",
     "@types/mocha": "^10.0.1",
+    "@types/node": "^18.15.11",
     "@types/sinon": "^10.0.13",
     "@types/sinon-chai": "^3.2.9",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
     "adminjs": "^7.0.0-beta-v7.2",
-    "aws-sdk": "^2.1339.0",
+    "aws-sdk-js-codemod": "^0.14.1",
     "chai": "^4.3.7",
     "eslint": "^8.36.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -59,8 +63,6 @@
     "sinon": "^15.0.2",
     "sinon-chai": "^3.7.0",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.5",
-    "@google-cloud/storage": "^6.9.4",
-    "aws-sdk": "^2.1339.0"
+    "typescript": "^4.9.5"
   }
 }
