--- a/package.json
+++ b/package.json
@@ -29,12 +29,12 @@
     "adminjs": ">=6.0.0"
   },
   "optionalDependencies": {
-    "@google-cloud/storage": "^6.9.4",
     "@aws-sdk/client-s3": "^3.301.0",
-    "@aws-sdk/s3-request-presigner": "^3.301.0"
+    "@aws-sdk/s3-request-presigner": "^3.301.0",
+    "@google-cloud/storage": "^6.9.4"
   },
   "devDependencies": {
-    "adminjs": "^7.0.0-beta-v7.3",
+    "adminjs": "^7.0.0-beta-v7.4",
     "@aws-sdk/client-s3": "^3.301.0",
     "@aws-sdk/s3-request-presigner": "^3.301.0",
     "aws-sdk-js-codemod": "^0.14.1",
@@ -45,6 +45,7 @@
     "@types/chai": "^4.3.4",
     "@types/mocha": "^10.0.1",
     "@types/node": "^18.15.11",
+    "@types/react": "^18.0.32",
     "@types/sinon": "^10.0.13",
     "@types/sinon-chai": "^3.2.9",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
