--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -27,9 +27,8 @@ jobs:
         run: yarn install
       - name: Lint
         run: yarn lint
-      # TODO: Enable tests before v7 release
-      # - name: Test
-      #   run: yarn test
+      - name: Test
+        run: yarn test
       - name: Build
         run: yarn build
       - name: Release
