--- a/package.json
+++ b/package.json
@@ -34,10 +34,8 @@
     "@google-cloud/storage": "^6.9.4"
   },
   "devDependencies": {
-    "adminjs": "^7.0.0-beta-v7.4",
     "@aws-sdk/client-s3": "^3.301.0",
     "@aws-sdk/s3-request-presigner": "^3.301.0",
-    "aws-sdk-js-codemod": "^0.14.1",
     "@commitlint/cli": "^17.4.4",
     "@commitlint/config-conventional": "^17.4.4",
     "@google-cloud/storage": "^6.9.4",
@@ -45,11 +43,12 @@
     "@types/chai": "^4.3.4",
     "@types/mocha": "^10.0.1",
     "@types/node": "^18.15.11",
-    "@types/react": "^18.0.32",
     "@types/sinon": "^10.0.13",
     "@types/sinon-chai": "^3.2.9",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
+    "adminjs": "^7.0.0-beta-v7.4",
+    "aws-sdk-js-codemod": "^0.14.1",
     "chai": "^4.3.7",
     "eslint": "^8.36.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -58,12 +57,12 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^4.2.5",
-    "typescript": "^5.0.2",
     "mocha": "^10.2.0",
     "semantic-release": "^20.1.3",
     "semantic-release-slack-bot": "^4.0.0",
     "sinon": "^15.0.2",
     "sinon-chai": "^3.7.0",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.2"
   }
 }
