--- a/example-app/tsconfig.json
+++ b/example-app/tsconfig.json
@@ -14,7 +14,7 @@
     "noImplicitThis": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "types": ["cypress"]
+    "types": ["cypress"],
   },
   "include": [ "ormconfig.js", "./src/**/*", "./cypress/**/*"]
 }
