fix(beta): change TS config

--- a/example-app/tsconfig.json
+++ b/example-app/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "jsx": "preserve",
+    "jsx": "react",
     "baseUrl": "./",
     "outDir": "dist",
     "target": "esnext",
