--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "outDir": "build",
     "target": "esnext",
     "esModuleInterop": true,
-    "jsx": "preserve",
+    "jsx": "react",
     "declaration": true,
     "declarationDir": "types",
     "skipLibCheck": true,
