--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     }
   },
   "peerDependencies": {
-    "adminjs": ">=6.0.0"
+    "adminjs": "^7.0.0"
   },
   "optionalDependencies": {
     "@aws-sdk/client-s3": "^3.301.0",
@@ -47,7 +47,7 @@
     "@types/sinon-chai": "^3.2.9",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
-    "adminjs": "^7.0.0-beta-v7.4",
+    "adminjs": "^7.0.0",
     "aws-sdk-js-codemod": "^0.14.1",
     "chai": "^4.3.7",
     "eslint": "^8.36.0",
